--- a/backend/Airbnb/src/main/resources/application.properties
+++ b/backend/Airbnb/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.username=team10
 spring.datasource.password=1010
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
-logging.level.sql=debug
 
+# Logging
+logging.level.sql=DEBUG
+logging.level.com.codesquad.team10.airbnb=DEBUG
